--- a/package.json
+++ b/package.json
@@ -11,14 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/core": "~9.0.5",
-    "@angular/forms": "~9.0.5",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
+    "@angular/animations": "^10.0.0-rc.0",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^10.0.0-rc.0",
+    "@angular/compiler": "^10.0.0-rc.0",
+    "@angular/core": "^10.0.0-rc.0",
+    "@angular/forms": "^10.0.0-rc.0",
+    "@angular/http": "^8.0.0-beta.10",
+    "@angular/localize": "^9.1.4",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^10.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^10.0.0-rc.0",
+    "@angular/platform-server": "^10.0.0-rc.0",
+    "@angular/router": "^10.0.0-rc.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^9.1.2",
+    "@ngrx/entity": "^9.1.2",
+    "@ngrx/router-store": "^9.1.0",
+    "@ngrx/store": "^9.1.2",
+    "@ngrx/store-devtools": "^9.1.2",
+    "angular-material-fileupload": "^2.0.0",
+    "bootstrap": "^4.5.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
+    "mat-file-upload": "^1.4.1",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-quill": "^9.2.0",
+    "ngx-uploader": "^8.0.0",
+    "pdfmake": "^0.1.65",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -26,11 +49,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
     "@angular/cli": "~9.0.5",
-    "@angular/compiler-cli": "~9.0.5",
+    "@angular/compiler-cli": "^10.0.0-rc.0",
     "@angular/language-service": "~9.0.5",
-    "@types/node": "^12.11.1",
+    "@ngrx/schematics": "^9.1.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,6 +66,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.9.2"
   }
 }
