--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ngx-uploader": "^8.0.0",
     "pdfmake": "^0.1.65",
     "quill": "^1.3.7",
+    "rasterizehtml": "^1.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
