--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@angular/platform-browser-dynamic": "^10.0.0-rc.0",
     "@angular/platform-server": "^10.0.0-rc.0",
     "@angular/router": "^10.0.0-rc.0",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^9.1.2",
@@ -38,7 +42,9 @@
     "mat-file-upload": "^1.4.1",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-disqus": "^2.4.3",
     "ngx-quill": "^9.2.0",
+    "ngx-sharebuttons": "^8.0.0",
     "ngx-uploader": "^8.0.0",
     "pdfmake": "^0.1.65",
     "quill": "^1.3.7",
